--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
     document.addEventListener("keydown", keyDownHandler, false);
     document.addEventListener("keyup", keyUpHandler, false);
+    document.addEventListener("mousemove", mouseMoveHandler, false);
 
     var bricks = [];
     for(var c=0; c<brickColumnCount; c++) {
@@ -62,6 +63,13 @@
         }
         else if(e.key == "Left" || e.key == "ArrowLeft") {
             leftPressed = false;
+        }
+    }
+
+    function mouseMoveHandler(e) {
+        var relativeX = e.clientX - canvas.offsetLeft;
+        if(relativeX > 0 && relativeX < canvas.width) {
+            paddleX = relativeX - paddleWidth/2;
         }
     }
 
